--- a/NOBUZZ-TEST-backend/Dockerfile
+++ b/NOBUZZ-TEST-backend/Dockerfile
@@ -1,13 +1,13 @@
-FROM node:14-alpine
+FROM node:16-alpine
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN yarn install
+RUN npm install --force
 
 COPY . .
 
 EXPOSE 8181
 
-CMD ["yarn", "start"]
+CMD ["sh", "-c", "sleep 10 && yarn start"]
