--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,22 @@ services:
       - "8181:8181"
     depends_on:
       - postgres
+    environment:
+      - DATABASE_HOST=postgres
+      - DATABASE_PORT=5432
+      - DATABASE_USER=nobuzztest
+      - DATABASE_PASSWORD=nobuzztest
+      - DATABASE_NAME=nobuzztest
+
+    volumes:
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+
 
   frontend:
     build:
       context: ./nobuzz_test_frontend
     ports:
-      - "80:80"
+      - "3000:3000"
     depends_on:
       - backend
 
@@ -24,5 +34,7 @@ services:
       POSTGRES_DB: nobuzztest
     expose:
       - "5432"
+    ports:
+      - "5432:5432"
     volumes:
-      - ./database/init.sql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
