--- a/nobuzz_test_frontend/Dockerfile
+++ b/nobuzz_test_frontend/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:14-alpine
+FROM node:16-alpine
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN yarn install
+RUN npm install --force
 
 COPY . .
 
